[package]
name = "netcode"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Más Bandwidth LLC"]
description = "A Rust implementation of the netcode network protocol"
license = "BSD-3-Clause"
repository = "https://github.com/mas-bandwidth/netcode.rs"
readme = "README.md"
keywords = ["gamedev", "networking", "udp", "protocol", "netcode"]
categories = ["game-development", "network-programming"]
# the crate name on crates.io is unresolved (netcode and netcode-rs are taken by
# other projects), so publishing is disabled until a name is chosen
publish = false
exclude = [".github/", "fuzz/"]

[dependencies]
chacha20poly1305 = "0.11"
getrandom = "0.4"
log = "0.4"
socket2 = "0.6"

[dev-dependencies]
env_logger = "0.11"

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }
