[package]
name = "netcode-official"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Más Bandwidth LLC"]
description = "The official Rust implementation of the netcode network protocol"
license = "LicenseRef-MBSL"
repository = "https://github.com/mas-bandwidth/netcode.rs"
documentation = "https://docs.rs/netcode-official"
readme = "README.md"
keywords = ["gamedev", "networking", "udp", "protocol", "netcode"]
categories = ["game-development", "network-programming"]
exclude = [".github/", "fuzz/"]

[lib]
# the library target keeps the name `netcode` (code says `use netcode::...`), so if
# the package later moves to the `netcode` name on crates.io, dependent code will not
# change -- only the dependency line in Cargo.toml
name = "netcode"

[dependencies]
chacha20poly1305 = "0.11"
getrandom = "0.4"
log = "0.4"
socket2 = "0.6"

[dev-dependencies]
env_logger = "0.11"

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }
